<resources>
    <string name="app_name">Percyv2</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PrecyCatering_Description">Precy’s Catering is a small company of Fulgencio Company. bla bala ba;a na nasahs asja hsja hsjahsjh asjh asashjashajshah sgahsgahsgah sgahsg ahg sahgsa hgshagshagsh agshagshagsh asasasasasa sas</string>

    <string name="food_name">Chicken Cordon Bleu</string>
    <string name="course_name">Main Course</string>
    <string name="menu">Menu</string>
    <string name="string_autofill">string/autofill</string>
    <string name="reservation_date">When</string>
    <string name="select_date">Select Date</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="select_event">Select Event</string>
    <string name="cpno">Mobile Number</string>
    <string name="peopleno">No. of Pax</string>
    <string name="res_details">Reservation Details</string>
    <string name="reservation_id">Reservation ID</string>
    <string name="change_details">Change Details</string>
    <string name="birthday">Birthday</string>
    <string name="home_txt">Home</string>
    <string name="client_s_name">Client\'s name</string>
    <string name="welcome">Welcome,</string>
    <string name="eventIntro">Getting ready for fabolous event</string>
    <string name="reserve_now">Reserve now</string>
    <string name="best_dishes">Best Dishes</string>
    <string name="chicken_cordon_bleu">Chicken Cordon Bleu</string>
    <string name="using_mobile_number">using Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number we\'ll send verification code \n if your number is real</string>
    <string name="OTP">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="asking_for_fullname">What is your Fullname?</string>
    <string name="asking_for_email">What is your Email?</string>
    <string name="otp_did_not_send">OTP did not send?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in_here">Log in here</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="precy">Precy\'s Catering Reservation</string>
    <string name="hi">Hi</string>
    <string name="thank_you_for_choosing_us">Thank you for choosing us</string>
    <string name="edit_info">Edit Info</string>
    <string name="see_all">See All</string>
    <string name="sign_in">Sign in</string>
    <string name="show_password">Show Password</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="phonenumHint">+639XXXXXXXXX</string>
    <string name="company_name">Company Name</string>
    <string name="where">Enter complete address details of venue</string>
    <string name="wheree">Where</string>
    <string name="other">Other</string>
    <string name="numOfPeopleWarning">If your number of people is below 50, Please contact us later</string>
    <string name="offer_best_venue">We offer you a best Venue</string>
    <string name="palaci_de_maynila">Palacio De Maynila</string>
    <string name="malate_manila">Malate Manila</string>
    <string name="loading">Loading...</string>
    <string name="create_reservation">Create reservation</string>
    <string name="create_your_reservation">Create your reservation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="occasion">Occasion</string>
    <string name="select_occasion">Select Occasion</string>
    <string name="motif">Motif</string>
    <string name="enter_motif">Enter Motif</string>
    <string name="payment_details">Payment Details</string>
    <string name="package_details">Package Details</string>
    <string name="package_name">Package name</string>
    <string name="price">Price</string>
    <string name="food_no_1">Food No. 1</string>
    <string name="total_price">100 x 700.00 = P70,000.00</string>
    <string name="mode_of_payment">Select Mode of Payment</string>
    <string name="mode_of_payments">Mode of Payment</string>
    <string name="my_number">09072275671</string>
    <string name="or">or</string>
    <string name="home">Home</string>
    <string name="my_reservation">My Reservation</string>
    <string name="enter_your_gcash_number">Enter your GCash Number</string>
    <string name="your_gcash_number">Your GCash Number</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="contact_info">Contact Info</string>
    <string name="_0997_305_9846">0997 305 9846</string>
    <string name="_02_7088_6081">02 7088 6081</string>


    <string-array name="food_name_list">
        <item>Chicken Cordon Bleu</item>
        <item>Chicken Lollipop</item>
        <item>Fish Fillet</item>
        <item>Kaldereta</item>
        <item>Lechon</item>
        <item>Buttered Vegetables</item>
        <item>Leche Flan</item>
        <item>Buko Salad</item>
        <item>Fruit Salad</item>
    </string-array>

    <string-array name="course_name_list">
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Main Course</item>
        <item>Veggies</item>
        <item>Dessert</item>
        <item>Dessert</item>
        <item>Dessert</item>
    </string-array>

    <string-array name="price_perpeople_list">

        <item>₱500 / Per Person</item>
        <item>₱600 / Per Person</item>
        <item>₱500 / Per Person</item>
        <item>₱700 / Per Person</item>
        <item>₱1000 / Per Person</item>
    </string-array>

    <string-array name="num_of_people_list">
        <item>10+</item>
        <item>20+</item>
        <item>20+</item>
        <item>30+</item>
        <item>45+</item>
    </string-array>

    <string-array name="event_name_list">
        <item>Birthday</item>
        <item>Wedding</item>
        <item>Corporate</item>
        <item>Business</item>
        <item>Events</item>
    </string-array>

    <string-array name="venue_name_list">
        <item>Palacio De Maynila</item>
        <item>Warehouse Eight </item>
        <item>Villa Capco </item>
        <item>Events Center </item>
        <item>Event Venue  Makati </item>
        <item>Mets Place</item>
    </string-array>

    <string-array name="venue_address_list">

        <item>Manila, Metro Manila</item>
        <item>Makati, Metro Manila </item>
        <item>Pasig, Metro Manila</item>
        <item>Makati, Metro Manila </item>
        <item>Makati, Metro Manila </item>
        <item>Makati, Metro Manila</item>

    </string-array>

</resources>