<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationProcessPackage.PaymentMethod">

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentDetails_cardview"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/white"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/calibribold"
                android:text="@string/payment_details"
                android:textColor="@color/black"
                android:textSize="26sp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@+id/paymentDetails_cardview">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_below="@id/paymentDetails_cardview"
           android:layout_marginTop="10dp"
           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="20dp"
               android:text="@string/package_details"
               android:textColor="@color/black"
               android:textSize="19sp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/PM_packageName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="15dp"
               android:text="@string/package_name"
               android:textColor="@color/black"
               android:textStyle="bold"
               android:textSize="18sp" />

           <TextView
               android:id="@+id/PM_foodNo1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="5dp"
               android:text="@string/food_no_1"
               android:textColor="@color/black"
               android:textSize="20sp" />

           <TextView
               android:id="@+id/PM_foodNo2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="5dp"
               android:text="@string/food_no_1"
               android:textColor="@color/black"
               android:textSize="20sp" />

           <TextView
               android:id="@+id/PM_foodNo3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="5dp"
               android:text="@string/food_no_1"
               android:textColor="@color/black"
               android:textSize="20sp" />

           <TextView
               android:id="@+id/PM_foodNo4"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="5dp"
               android:text="@string/food_no_1"
               android:textColor="@color/black"
               android:textSize="20sp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="20dp"
               android:text="@string/payment_details"
               android:textColor="@color/black"
               android:textSize="19sp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/PM_totalPrice"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="5dp"
               android:text="@string/total_price"
               android:textColor="@color/black"
               android:textSize="20sp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="30dp"
               android:layout_marginTop="20dp"
               android:text="@string/mode_of_payments"
               android:textColor="@color/black"
               android:textSize="19sp"
               android:textStyle="bold" />

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/editText_event"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               android:visibility="visible"
               android:hint="@string/mode_of_payment"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
               app:boxStrokeColor="@color/semibrown"
               app:hintTextColor="@color/semibrown">

               <AutoCompleteTextView
                   android:id="@+id/modeOfPayment_ACT"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="none"/>
           </com.google.android.material.textfield.TextInputLayout>

           <FrameLayout
               android:id="@+id/gCash_frameLayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="30dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="30dp"
                       android:layout_marginTop="20dp"
                       android:text="GCash Number"
                       android:textColor="@color/black"
                       android:textSize="19sp"
                       android:textStyle="bold" />

                   <LinearLayout
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">

                       <TextView
                           android:id="@+id/precyMobileNum_TextView"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="30dp"
                           android:layout_marginTop="5dp"
                           android:text="@string/my_number"
                           android:textColor="@color/black"
                           android:textSize="20sp" />

                       <ImageView
                           android:id="@+id/copy_ImageView"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="5dp"
                           android:src="@drawable/ic_baseline_content_copy_24"
                           android:layout_marginStart="50dp"/>


                   </LinearLayout>

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="20dp"
                       >


                       <androidx.cardview.widget.CardView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content">

                           <androidx.cardview.widget.CardView
                               android:layout_width="match_parent"
                               android:layout_height="700dp"
                               app:cardBackgroundColor="@color/lightbrown"
                               android:layout_marginTop="30dp"
                               android:layout_marginStart="5dp"
                               android:layout_marginEnd="5dp"
                               app:cardCornerRadius="10dp"
                               app:cardElevation="5dp">

                               <RelativeLayout
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content">

                                   <ImageView
                                       android:layout_width="wrap_content"
                                       android:layout_height="wrap_content"
                                       android:layout_marginStart="20dp"
                                       android:layout_marginEnd="20dp"
                                       android:src="@drawable/gcash" />

                               </RelativeLayout>
                           </androidx.cardview.widget.CardView>
                       </androidx.cardview.widget.CardView>

                       <RelativeLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginTop="40dp">


                       </RelativeLayout>

                   </RelativeLayout>
               </LinearLayout>

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">

                   <androidx.cardview.widget.CardView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:cardBackgroundColor="@color/bgcolor"
                       android:layout_marginTop="100dp"
                       app:cardCornerRadius="50dp"
                       android:layout_marginBottom="5dp"
                       android:layout_centerHorizontal="true">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/or"
                           android:textSize="25sp"
                           android:layout_marginTop="5dp"
                           android:layout_marginBottom="5dp"
                           android:layout_marginStart="10dp"
                           android:layout_marginEnd="10dp"/>
                   </androidx.cardview.widget.CardView>
               </RelativeLayout>
           </FrameLayout>

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent">

                   <androidx.appcompat.widget.AppCompatButton
                       android:id="@+id/reserve_Btn"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:layout_marginStart="20dp"
                       android:layout_marginEnd="20dp"
                       android:layout_centerInParent="true"
                       android:background="@color/semibrown"
                       android:text="Reserve now"

                       android:textAllCaps="false"
                       android:textSize="15sp" />

                   <ProgressBar
                       android:id="@+id/reserveBtn_ProgBar"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="50dp"
                       android:visibility="visible"
                       android:layout_centerInParent="true"
                       android:indeterminateTint="@color/semibrown"

                       />
               </RelativeLayout>
           </FrameLayout>
       </LinearLayout>
   </ScrollView>

</RelativeLayout>